[FIX] Scroll behaviour on mobile

--- a/src/app/main/home/home.component.scss
+++ b/src/app/main/home/home.component.scss
@@ -84,7 +84,7 @@
     color: var(--g-white);
     margin-bottom: 40px;
     @include down-sm {
-      font-size: 19px;
+      font-size: 17px;
       margin-bottom: 20px;
     }
     span {
