--- a/src/app/main/work/work.component.scss
+++ b/src/app/main/work/work.component.scss
@@ -13,80 +13,88 @@
     width: 50%;
     overflow: hidden;
     @include down-sm {
-        flex: 0 0 100%;
-        width: 100%;
+      flex: 0 0 100%;
+      width: 100%;
     }
 
     img {
-        transition: ease all 0.34s;
-        transform: scale(1);
+      transition: ease all 0.34s;
+      transform: scale(1);
+      object-fit: fill;
+      width: 100%;
+      height: auto;
     }
   }
   & .work-text {
-      flex: 0 0 50%;  
-      width: 50%;
-      padding-left: 20px;
-      padding-right: 8%;
-      display: flex;
-      flex-direction: column;
+    flex: 0 0 50%;
+    width: 50%;
+    padding-left: 20px;
+    padding-right: 8%;
+    display: flex;
+    flex-direction: column;
 
-      @include down-sm {
-          flex: 0 0 100%;
-          width: 100%;
-          padding: 20px 0 0;
-      }
-      
-      & h4 {
-          font-size: 30px;
-          font-weight: 700;
-          @include down-sm {
-              font-size: 24px;
-          }
-          a {
-              color: var(--g-white);
-          }
-      }
-
-      & h5 {
-        font-size: 24px;
-        font-weight: 500;
-        @include down-sm {
-            font-size: 24px;
-        }
-        a {
-            color: var(--g-white);
-        }
+    @include down-sm {
+      flex: 0 0 100%;
+      width: 100%;
+      padding: 20px 0 0;
     }
-      & .btn-bar {
-          margin-top: auto;
-          a {
-              width: 35px;
-              height: 35px;
-              color: var(--g-white);
-              display: inline-flex;
-              align-items: center;
-              justify-content: center;
-              font-size: 27px;
-              line-height: 1;
-              cursor: pointer;
-              &:hover{
-                  color: var(--g-primary);
-              }
-          }
+
+    & h4 {
+      font-size: 30px;
+      font-weight: 700;
+      @include down-sm {
+        font-size: 24px;
       }
+      a {
+        color: var(--g-white);
+      }
+    }
+
+    & h5 {
+      font-size: 24px;
+      font-weight: 500;
+      @include down-sm {
+        font-size: 24px;
+      }
+      a {
+        color: var(--g-white);
+      }
+    }
+    & .btn-bar {
+      margin-top: auto;
+      a {
+        width: 35px;
+        height: 35px;
+        color: var(--g-white);
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 27px;
+        line-height: 1;
+        cursor: pointer;
+        &:hover {
+          color: var(--g-primary);
+        }
+      }
+    }
   }
   &:hover {
-      & .work-img {
-          img {
-              transform: scale(1.2);
-          }
+    & .work-img {
+      img {
+        transform: scale(1.2);
       }
+    }
+  }
+}
+.section-heading {
+  @include down-md {
+    margin-top: 64px;
   }
 }
 
 .mt-4 {
-    margin-top: 32px;
+  margin-top: 32px;
 }
 .mt-8 {
-    margin-top: 64px;
+  margin-top: 64px;
 }
