--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,8 @@ Primary use:    pxdraft
 // @import "../node_modules/bootstrap/scss/grid";
 // @import "../node_modules/bootstrap/scss/helpers";
 // @import "../node_modules/bootstrap/scss/utilities/api";
+
+a,
+button {
+  cursor: pointer;
+}
